feat: check your git story 2025'

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <!-- <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>GitStory 2025 - Your Year in Code</title>
     <meta name="description" content="Discover your GitHub story for 2025. See your commits, contributions, and coding journey visualized in a beautiful, cinematic experience." />
     <meta name="keywords" content="GitHub, developer story, coding stats, git wrapped, year in review" />
