feat: fix public share link issue

--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <meta charset="UTF-8" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>GitStory 2025 - Your Year in Code</title>
     <meta name="description" content="Discover your GitHub story for 2025. See your commits, contributions, and coding journey visualized in a beautiful, cinematic experience." />
     <meta name="keywords" content="GitHub, developer story, coding stats, git wrapped, year in review" />
     <meta name="author" content="GitStory" />
 
-    <meta property="og:title" content="GitStory 2025 - Your Year in Code" />
-    <meta property="og:description" content="Discover your GitHub story for 2025. See your commits, contributions, and coding journey." />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://git-story-explorer.vercel.app/" />
+    <meta property="og:title" content="GitStory 2025 - Your Year in Code" />
+    <meta property="og:description" content="Discover your GitHub story for 2025. See your commits, contributions, and coding journey visualized in a beautiful, cinematic experience." />
+    <meta property="og:image" content="https://git-story-explorer.vercel.app/og-image.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:alt" content="GitStory 2025 - Your GitHub Year in Review" />
+    <meta property="og:site_name" content="GitStory 2025" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://git-story-explorer.vercel.app/" />
     <meta name="twitter:title" content="GitStory 2025 - Your Year in Code" />
-    <meta name="twitter:description" content="Discover your GitHub story for 2025." />
+    <meta name="twitter:description" content="Discover your GitHub story for 2025. See your commits, contributions, and coding journey visualized in a beautiful, cinematic experience." />
+    <meta name="twitter:image" content="https://git-story-explorer.vercel.app/og-image.svg" />
+    <meta name="twitter:image:alt" content="GitStory 2025 - Your GitHub Year in Review" />
   </head>
   <body>
     <div id="root"></div>
